<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/queensland"
    tools:context=".DashboardActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <android.support.v7.widget.CardView
            android:id="@+id/cdintro"
            android:layout_width="0dp"
            android:layout_height="130dp"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:background="@color/white"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="4dp"
                android:layout_marginRight="8dp"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Introduction"
                    android:textColor="@color/black"
                    android:layout_marginBottom="8dp"
                    android:textAlignment="center"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="8dp"
                    android:background="@color/darkgray"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/home_intro_text"
                    android:textColor="@color/darkgray"
                    android:textAlignment="center"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cdacctsetting"
            android:layout_width="0dp"
            android:layout_height="130dp"
            android:layout_marginLeft="4dp"
            android:layout_weight="1"
            android:background="@color/white"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="4dp"
                android:layout_marginRight="8dp"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Account Setting"
                    android:textColor="@color/black"
                    android:layout_marginBottom="8dp"
                    android:textAlignment="center"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="8dp"
                    android:background="@color/darkgray"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/home_acctSetting_text"
                    android:textColor="@color/darkgray"
                    android:textAlignment="center"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <android.support.v7.widget.CardView
            android:id="@+id/cdmakecomplaint"
            android:layout_width="0dp"
            android:layout_height="130dp"
            android:layout_weight="1"
            android:background="@color/white"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Register Complaint"
                    android:textColor="@color/black"
                    android:layout_marginBottom="8dp"
                    android:textAlignment="center"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="8dp"
                    android:background="@color/darkgray"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/makeComplaint_text"
                    android:textColor="@color/darkgray"
                    android:textAlignment="center"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <android.support.v7.widget.CardView
            android:id="@+id/cdcomplainthistory"
            android:layout_width="0dp"
            android:layout_height="130dp"
            android:layout_weight="1"
            android:background="@color/white"
            app:cardCornerRadius="10dp"
            android:saveEnabled="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Complaint History"
                    android:textColor="@color/black"
                    android:layout_marginBottom="8dp"
                    android:textAlignment="center"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="8dp"
                    android:background="@color/darkgray"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/complaintHistory_text"
                    android:textColor="@color/darkgray"
                    android:textAlignment="center"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</LinearLayout>